Add rough draft of help section and hide Help button at desired times

--- a/source/site/frontend/html/components/settings.html
+++ b/source/site/frontend/html/components/settings.html
@@ -79,7 +79,29 @@
         <div class="tabcontent">
             <div class="cover-contianer">
                 <!-- TODO: Type up instructions -->
-                <h3>Help lol</h3>
+                <h2>Tortellini's Timer</h2>
+                <h3>What is the Pomodoro Method?</h3>
+                <p>The pomodoro method is a time management technique in order to increase productivity by breaking down work and break cycles into intervals.
+                    First, a user plans everything they want to get done and estimates how many cycles each task will take. They are encouraged to break down the task into
+                    digestible parts (but not too small). Then they can begin the timer. The technique begins with the work cycle (the longest cycle). During
+                    the work cycle the user must completely focus on working on their planned task. After the time is up, the timer will alert them to the start 
+                    of the break cycle. The break cycle is shorter than the work cycle and allows the user to relax and have their mind wander. As soon as the break
+                    is over, the work cycle begins again. Every fourth break is a longer break to reward the user for staying on task. After all the tasks are finished,
+                    the timer ends.
+                </p>
+                <h3>How does our timer accomplish that?</h3>
+                <ul>
+                    <li>Our timer has a tasklist the user should add to before the timer can start.</li>
+                    <li>Before the timer starts and during breaks, the user can edit, delete, or reorder tasks.</li>
+                    <li>If a user enters a task longer than four cycles, we prompt them to automatically split the task into smaller digestible parts.</li>
+                    <li>Before estimating the tasks, if the user wishes, they can change the length of work, short, and long break countdowns from their defaults. However, the work time must be the longest and
+                    long break the second longest.</li>
+                    <li>While the timer is running, at all points the user can break out of the pomodoro cycles by clicking "Emergency Stop" if they have it enabled.
+                    This will completely break the user out of the rhythm. The amount of cycles completed will reset and if the user stopped in the middle of a work cycle,
+                    it will not count.</li>
+                    <li>During work cycles, the user can move onto the next task in the next work cycle before reaching the estimation by clicking "Finished Early".</li>
+                    <li>During the break the user can open the tasklist, but if they wish to quickly extend their current task estimation by one, they can click "Add Cycle".</li>
+                </ul>
             </div>
         </div>
         
