added simple animations task item & add task button

--- a/source/site/frontend/html/components/task-list.html
+++ b/source/site/frontend/html/components/task-list.html
@@ -16,11 +16,11 @@
     <div>
       <ul class="side-bar-division" id="pending-add">
         <!-- This space is for pending adds -->
-        <button type="button" id="add-task-button">+</button>
+        <button type="button" id="add-task-button"><img src="../../assets/images/add-task.png"</button>
       </ul>
     </div>
   </div>
-  
+
   <div class="task-list-separator">
     <h3>Finished Tasks:</h3>
     <ul class="side-bar-division" id="finished"></ul>
