--- a/source/site/frontend/html/components/task.html
+++ b/source/site/frontend/html/components/task.html
@@ -18,8 +18,8 @@
 
 <div id="edit" class="task-container">
   <!-- Edit Mode -->
-  <input class="task" id="task-edit" type="text" value="Please enter a task"/>
-  <input class="pomo-counter" id="pomo-counter-edit" type="number" value="1" />
+  <input class="task" id="task-edit" type="text" placeholder="Task Name"/>
+  <input class="pomo-counter" id="pomo-counter-edit" type="number" placeholder="Cycle Count" />
   <button class="pomo-confirm-btn" id="pomo-confirm-btn">Confirm</button>
   <button class="pomo-cancel-btn" id="pomo-cancel-btn">Cancel</button>
 </div>
