--- a/source/site/frontend/css/task-item.css
+++ b/source/site/frontend/css/task-item.css
@@ -1,22 +1,20 @@
 /* ---- Task Item Container ---- */
 .task-container {
   display: flex;
-  border-style: solid;
-  border-color: white;
-  border-width: 2px;
+  border:1px solid rgb(93, 147, 161);
   border-radius: 5px;
   flex-direction: row;
   justify-content: center;
   height: 5%;
   margin: 5px;
-  transition: position 0.4s;
-  transition: background-color 0.3s;
-  transition: box-shadow 0.1s;
+  padding: 5px;
+  transition: 0.3s ease;
 }
 
 .task-container:hover {
-  background-color: rgb(207, 207, 207);
-  box-shadow: 4px 3px 5px #000;
+  background-color: rgb(230, 245, 245);
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
+  transition: .3s ease;
 }
 
 /* ---- View Mode ---- */
@@ -97,14 +95,19 @@
 /*
  * Edit Mode Task Item Name
  */
-#task-edit.task {
+#task-edit.task,
+#pomo-counter-edit.pomo-counter {
   text-align: center;
   margin: 1mm;
-  border: 1mm;
+  padding-top: 4px;
+  border: 1px solid transparent;
   border-radius: 5px;
+  border-top: none;
+  border-bottom: 1px solid #DDD;
+  box-shadow: inset 0 1px 2px rgb(0 0 0 / 39%), 0 -1px 1px #fff, 0 1px 0 #fff;
   line-height: 24px;
   width: 35%;
-  background-color: rgba(255, 255, 255, 0.8);
+  /* background-color: rgba(255, 255, 255, 0.8); */
   font-size: medium;
   flex-grow: 4;
 }
@@ -112,7 +115,7 @@
 /*
  * Edit Mode Task Item Pomo Count
  */
-#pomo-counter-edit.pomo-counter {
+/* #pomo-counter-edit.pomo-counter {
   text-align: center;
   margin: 1mm;
   border: 1mm;
@@ -122,7 +125,7 @@
   background-color: rgba(255, 255, 255, 0.8);
   font-size: medium;
   flex-grow: 2;
-}
+} */
 
 /*
  * Edit Mode Confirm & Cancel Buttons
