--- a/source/site/frontend/css/task-list.css
+++ b/source/site/frontend/css/task-list.css
@@ -4,7 +4,7 @@
   padding: 0%;
   border: 1px solid rgb(0, 0, 0);
   border-radius: 5px;
-  background-color: rgba(201, 201, 201, 0.5);
+  background-color: rgba(219, 237, 236, 0.72);
   backdrop-filter: blur(30px);
   -webkit-backdrop-filter: blur(30px);
   position: fixed;
@@ -25,7 +25,7 @@
   text-align: center;
   margin: 0;
   border: 0;
-  padding: 10px;
+  padding: 10px 0 10px;
   width: 100%;
 }
 
@@ -52,20 +52,33 @@ h3 {
 
 /*
  * Add Task Button
+ * Inspired by Ivan Villa - https://codepen.io/ivanvillacreative/pen/wawXdZ
  */
 #add-task-button {
+  display: grid;
+  align-items: center;
+  justify-content: center;
   align-self: center;
-  background-color: rgba(255, 255, 255, 0.534);
-  font-size: 31px;
-  border: 1px solid rgba(0, 0, 0, 0.5);
+  background-color: rgba(255, 255, 255, 0);
+  border: 1px solid rgb(93, 147, 161);
   border-radius: 100px;
-  width: 10%;
-  height: 5%;
-  position: relative;
-  left: 0;
-  top: auto;
+  width: 50px;
+  height: 50px;
+  padding-bottom: 3px;
   margin: 2mm;
-  padding: 0;
+  transition: .5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+#add-task-button:hover {
+  width: 100px;
+  background-color: rgb(230, 245, 245);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+  transition: .3s;
+}
+
+#add-task-button:active {
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+  transition: .05s
 }
 
 /*
@@ -77,4 +90,11 @@ ul {
   padding: 0;
   margin: 1em;
   list-style-type: none;
+}
+
+/*
+ * Running task information text styling
+ */
+p {
+  margin: 2%;
 }
