--- a/source/site/frontend/css/task-item.css
+++ b/source/site/frontend/css/task-item.css
@@ -1,7 +1,7 @@
 /* ---- Task Item Container ---- */
 .task-container {
   display: flex;
-  border:1px solid rgb(93, 147, 161);
+  border: 1px solid rgb(93, 147, 161);
   border-radius: 5px;
   flex-direction: row;
   justify-content: center;
@@ -13,8 +13,8 @@
 
 .task-container:hover {
   background-color: rgb(230, 245, 245);
-  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
-  transition: .3s ease;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+  transition: 0.3s ease;
 }
 
 /* ---- View Mode ---- */
@@ -93,7 +93,7 @@
 /* ---- Edit Mode ---- */
 
 /*
- * Edit Mode Task Item Name
+ * Edit Mode Task Item Name & Pomo Count
  */
 #task-edit.task,
 #pomo-counter-edit.pomo-counter {
@@ -103,29 +103,13 @@
   border: 1px solid transparent;
   border-radius: 5px;
   border-top: none;
-  border-bottom: 1px solid #DDD;
+  border-bottom: 1px solid #ddd;
   box-shadow: inset 0 1px 2px rgb(0 0 0 / 39%), 0 -1px 1px #fff, 0 1px 0 #fff;
   line-height: 24px;
   width: 35%;
-  /* background-color: rgba(255, 255, 255, 0.8); */
   font-size: medium;
   flex-grow: 4;
 }
-
-/*
- * Edit Mode Task Item Pomo Count
- */
-/* #pomo-counter-edit.pomo-counter {
-  text-align: center;
-  margin: 1mm;
-  border: 1mm;
-  border-radius: 5px;
-  line-height: 24px;
-  width: 35%;
-  background-color: rgba(255, 255, 255, 0.8);
-  font-size: medium;
-  flex-grow: 2;
-} */
 
 /*
  * Edit Mode Confirm & Cancel Buttons
