--- a/source/site/frontend/css/task-list.css
+++ b/source/site/frontend/css/task-list.css
@@ -66,19 +66,19 @@ h3 {
   height: 50px;
   padding-bottom: 3px;
   margin: 2mm;
-  transition: .5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  transition: 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
 #add-task-button:hover {
   width: 100px;
   background-color: rgb(230, 245, 245);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
-  transition: .3s;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
 }
 
 #add-task-button:active {
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
-  transition: .05s
+  transition: 0.05s;
 }
 
 /*
