--- a/source/site/frontend/css/modal.css
+++ b/source/site/frontend/css/modal.css
@@ -74,3 +74,17 @@
   background-color: rgba(230, 230, 230, 0.5);
   flex-direction: row;
 }
+
+#confirm-button:hover,
+#cancel-button:hover {
+  cursor: pointer;
+  background-color: rgba(179, 172, 172, 0.5);
+
+}
+
+#confirm-button:active,
+#cancel-button:active {
+  cursor: pointer;
+  background-color: rgba(131, 126, 126, 0.5);
+
+}
