--- a/source/site/frontend/css/timer.css
+++ b/source/site/frontend/css/timer.css
@@ -5,13 +5,24 @@ body {
 }
 
 html {
-  background: url("/assets/images/web-background.jpg") no-repeat center center fixed;
-  background-color: #4a707a;
+  /*background: url("/assets/images/web-background.jpg") no-repeat center center fixed;*/
+  /*background-color: #4a707a;
+  background: rgb(246,245,245);
+  */
+  background: radial-gradient(circle, rgba(246,245,245,1) 0%, rgba(43,215,215,1) 100%);
+  background: rgb(156,152,214);
+  background: radial-gradient(circle, rgba(156,152,214,1) 0%, rgba(17,85,85,1) 100%);
   background-size: cover;
+}
+
+@font-face {
+  font-family: Exo2;
+  src: url("../assets/fonts/Exo2-SemiBold.ttf");
 }
 
 body {
   font-family:
+    "Exo2",
     "ArialRounded",
     -apple-system,
     BlinkMacSystemFont,
@@ -23,6 +34,8 @@ body {
     "Apple Color Emoji",
     "Segoe UI Emoji",
     "Segoe UI Symbol";
+
+  letter-spacing: .1em;
 }
 
 /* style links */
@@ -63,24 +76,43 @@ footer {
   align-items: center;
 }
 
-#early-prompt {
+.timer-labels {
+  align-items: center;
+  justify-content: center;
+}
 
+#early-prompt {
+  background: #5abdcc;
+  width: fit-content;
+  padding: .5vh 1.5vh .5vh 1.5vh;
+  border-radius: 30px;
+  text-align: center;
+  font-size: 20px;
+  color: #0f373d;
 }
 
 #timer-label {
+  background: #5abdcc;
+  width: fit-content;
+  padding: .5vh 1.5vh .5vh 1.5vh;
+  border-radius: 30px;
   text-align: center;
   font-size: 20px;
-  color: #d4f3f8;
+  color: #0f373d;
+}
+
+.control-buttons {
+  
 }
 
 .task {
-  border: 2px solid black;
-  margin: 40px 0 20px;
-  padding: 0 1vh 1vh 1vh;
+  /*border: 2px solid black;*/
+  /*margin: 40px 0 20px;*/
+  padding: 1vh;
   border-radius: 4px;
   text-align: center;
   font-size: 22px;
-  height: 55px;
+  height: fit-content;
   width: fit-content;
   background-color: rgba(230, 230, 230, 0.5);
 }
@@ -94,7 +126,7 @@ footer {
   display: inline-block;
 }
 
-#c-task-list {
+#c-task-list{
   position: absolute;
   z-index: 1;
 }
