--- a/source/site/frontend/css/control-button.css
+++ b/source/site/frontend/css/control-button.css
@@ -2,20 +2,13 @@
   outline: none;
 }
 
-/* button {
-  border: 2px solid black;
-  margin: 20px 0px 20px;
-  padding: 0px 12px;
-  border-radius: 4px;
-  box-shadow: rgba(0, 0, 0, 0.5) 2px 2px 0px;
-  font-size: 22px;
-  height: 55px;
-  font-weight: bold;
-  width: 200px;
-  background-color: rgba(230, 230, 230, 0.5);
-} */
+@font-face {
+  font-family: Exo2;
+  src: url("../assets/fonts/Exo2-SemiBold.ttf");
+}
 
 button {
+  font-family: "Exo2";
   color: #f8f8ff;
   background: #1a748e;
   box-sizing: border-box;
@@ -25,9 +18,10 @@ button {
   margin: 5vh 0.5vh 5vh 0.5vh;
   width: fit-content;
   height: 5vh;
-  padding: 0 1vh 0 1vh;
+  width: 25vh;
+  padding: .25vh 0 1vh 0;
   font-size: 3vh;
-  box-shadow: 0 6px #999;
+  box-shadow: 0 6px rgb(85, 85, 85);
 }
 
 button:hover {
