--- a/source/site/frontend/css/timer-display.css
+++ b/source/site/frontend/css/timer-display.css
@@ -1,13 +1,16 @@
+/*
+@font-face {
+  font-family: Gitaluevo;
+  src: url("../assets/fonts/Gitaluevo.ttf");
+}
+*/
+
 #timer-container {
   /* background: #c5d1dd; */
-  background: #d4f3f8;
+  background: #57c4d4;
   box-sizing: border-box;
-  border: 3px solid black;
   opacity: 0.8;
   border-radius: 30px;
-
-  /* box-shadow: rgba(0, 0, 0, 0.5) 2px 2px 0px; */
-  margin: 2vh auto;
   width: 65vh;
   height: 30vh;
   display: flex;
@@ -15,4 +18,5 @@
   justify-content: center;
   flex-direction: column;
   font-size: 25vh;
+  color: whitesmoke;
 }
