--- a/source/site/frontend/html/components/task-list.html
+++ b/source/site/frontend/html/components/task-list.html
@@ -16,7 +16,9 @@
     <div>
       <ul class="side-bar-division" id="pending-add">
         <!-- This space is for pending adds -->
-        <button type="button" id="add-task-button"><img src="../../assets/images/add-task.png"</button>
+        <button type="button" id="add-task-button">
+          <img src="../../assets/images/add-task.png">
+        </button>
       </ul>
     </div>
   </div>
