--- a/source/site/frontend/css/settings.css
+++ b/source/site/frontend/css/settings.css
@@ -10,19 +10,19 @@ body {
 .settings-close {
   z-index: 4;
   position: absolute;
+  margin: 1mm;
+  font-size: 2em;
+  background: transparent;
+  border: none;
 }
 
 .tabs {
   position: absolute;
-  top: 50%;
-  left: 30%;
-
-  /* transform: translate(-20%, -50%); */
-  width: 1300px;
-  height: 800px;
+  width: 70vw;
+  height: 60vh;
   padding: 30px 20px;
   background: #f5f5f5;
-  box-shadow: 5px 5px 10px 5px #ccc;
+  box-shadow: 4px 5px 5px #ccc;
   overflow: hidden;
   z-index: 3;
 }
@@ -54,7 +54,7 @@ body {
 .tabs .tab-content {
   position: relative;
   height: 100%;
-  overflow: hidden;
+  overflow-y: auto;
 }
 
 .tabs .tab-content > div > i {
@@ -85,9 +85,8 @@ body {
 
 .tabs .tab-content > div {
   position: absolute;
-  /* text-align: center; */
   padding: 40px 20px;
-  top: -200%;
+  top: -300%;
   transition: all 500ms ease-in-out;
 }
 
