--- a/source/site/frontend/css/control-button.css
+++ b/source/site/frontend/css/control-button.css
@@ -6,7 +6,7 @@
   font-family: Exo2;
   src: url("../assets/fonts/Exo2-SemiBold.ttf");
 }
-
+/*
 button {
   font-family: "Exo2";
   color: #f8f8ff;
@@ -16,11 +16,23 @@ button {
   opacity: 0.75;
   border-radius: 30px;
   margin: 5vh 0.5vh 5vh 0.5vh;
-  width: fit-content;
-  height: 5vh;
-  width: 25vh;
   padding: .25vh 0 1vh 0;
-  font-size: 3vh;
+  box-shadow: 0 6px rgb(85, 85, 85);
+}*/
+
+button {
+  font-family: "Exo2";
+  color: #f8f8ff;
+  background: #1a748e;
+  box-sizing: border-box;
+  border: 2px solid black;
+  opacity: 0.75;
+  width: 18vh;
+  height: 3vh;
+  font-size: 2vh;
+  border-radius: 30px;
+  padding: 0 0 1vh 0;;
+  margin: 5vh 0.5vh 5vh 0.5vh;
   box-shadow: 0 6px rgb(85, 85, 85);
 }
 
