--- a/source/site/frontend/html/components/task-list.html
+++ b/source/site/frontend/html/components/task-list.html
@@ -17,7 +17,7 @@
       <ul class="side-bar-division" id="pending-add">
         <!-- This space is for pending adds -->
         <button type="button" id="add-task-button">
-          <img src="../../assets/images/add-task.png">
+          <img src="../../assets/images/add-task.png" alt="Add Task Button">
         </button>
       </ul>
     </div>
