--- a/source/site/frontend/html/components/settings.html
+++ b/source/site/frontend/html/components/settings.html
@@ -22,7 +22,7 @@
 
         <div class="tabcontent active">
             <div class="cover-contianer">
-                <button id="light-mode-button" type="button" onclick="toggleTheme()" style="align-self:center;">
+                <button id="light-mode-button" type="button" style="align-self:center;">
                     <img src="/assets/settings/light.png" alt="light mode example" style="height: 100px;"></button>
                 <button id="dark-mode-button" type="button" style="align-self:center;">
                     <img src="/assets/settings/dark.png" alt="dark mode example" style="height: 100px;"></button>
