Last linting fixes

--- a/source/site/frontend/css/control-button.css
+++ b/source/site/frontend/css/control-button.css
@@ -8,7 +8,7 @@
 }
 
 button {
-  font-family: "Exo2";
+  font-family: "Exo2", sans-serif;
   color: #f8f8ff;
   background: #1a748e;
   box-sizing: border-box;
