--- a/source/site/frontend/css/task-item.css
+++ b/source/site/frontend/css/task-item.css
@@ -17,7 +17,7 @@ button {
 }
 
 .task-container:hover {
-  background-color: rgb(230, 245, 245);
+  background-color: rgb(219, 231, 231);
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
   transition: 0.3s ease;
 }
@@ -64,6 +64,9 @@ button {
   padding: 5%;
   align-content: center;
   justify-content: center;
+  background-color: rgba(255, 255, 255, 0.534);
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
 }
 
 /*
@@ -77,14 +80,10 @@ button {
 /*
  * View Mode Position Order Buttons
  */
-.order_btn {
-  text-align: center;
-  margin: 1mm;
-  border: 1mm;
-  height: 100%;
-  background-color: rgb(153, 153, 153);
-  font-size: medium;
-  flex-grow: 1;
+.order-btn {
+  background-color: rgba(255, 255, 255, 0.534);
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
 }
 
 /*
@@ -103,6 +102,7 @@ button {
 #task-edit.task,
 #pomo-counter-edit.pomo-counter {
   text-align: center;
+  background-color: rgba(255, 255, 255, 0.8);
   margin: 1mm;
   padding-top: 4px;
   border: 1px solid transparent;
