lots of cypress tests

--- a/source/site/frontend/html/components/settings.html
+++ b/source/site/frontend/html/components/settings.html
@@ -51,7 +51,7 @@
                     </div>
                     <div class="option-control">
                         <!-- <c-time-picker></c-time-picker> -->
-                        <input type="number" id="working-min" min="0" max="60">
+                        <input type="number" id="working-min" min="0" max="60" step="1">
                     </div>
                 </div>
                 <div class="option-container">
@@ -60,7 +60,7 @@
                     </div>
                     <div class="option-control">
                         <!-- <c-time-picker></c-time-picker> -->
-                        <input type="number" id="short-break-min" min="0" max="60">
+                        <input type="number" id="short-break-min" min="0" max="60" step="1">
                     </div>
                 </div>
                 <div class="option-container">
@@ -69,7 +69,7 @@
                     </div>
                     <div class="option-control">
                         <!-- <c-time-picker></c-time-picker> -->
-                        <input type="number" id="long-break-min" min="0" max="60">
+                        <input type="number" id="long-break-min" min="0" max="60" step="1">
                     </div>
                 </div>
             </div>
