--- a/source/site/frontend/html/components/settings.html
+++ b/source/site/frontend/html/components/settings.html
@@ -90,6 +90,9 @@
             <p style="font-size: small;">
                 © 2021 Team Tortellini All Rights Reserved.
             </p>
+            
+            <p id="people-online" style="font-size: small;">
+            </p>
         </div>
     </div>
 </div>
