--- a/source/site/frontend/html/components/settings.html
+++ b/source/site/frontend/html/components/settings.html
@@ -91,6 +91,8 @@
                 © 2021 Team Tortellini All Rights Reserved.
             </p>
             
+            <p id="analysis" style="font-size: small;"></p>
+
             <p id="people-online" style="font-size: small;">
             </p>
         </div>
