--- a/source/site/frontend/html/components/settings.html
+++ b/source/site/frontend/html/components/settings.html
@@ -95,6 +95,8 @@
 
             <p id="people-online" style="font-size: small;">
             </p>
+
+            <button id="delete-data">Delete All My Data</button>
         </div>
     </div>
 </div>
