--- a/source/site/frontend/html/components/task-list.html
+++ b/source/site/frontend/html/components/task-list.html
@@ -5,6 +5,11 @@
 
   <div class="task-list-separator">
     <h3>Running Task:</h3>
+    <div class="column-headings">
+      <p class="heading">Task Name:</p>
+      <p class="heading">Estimated Cycles:</p>
+      <p class="heading">Actual Cycles:</p>
+    </div>
     <ul class="side-bar-division" id="running"></ul>
   </div>
 
@@ -25,6 +30,11 @@
 
   <div class="task-list-separator">
     <h3>Finished Tasks:</h3>
+    <div class="column-headings">
+      <p class="heading">Task Name:</p>
+      <p class="heading">Estimated Cycles:</p>
+      <p class="heading">Actual Cycles:</p>
+    </div>
     <ul class="side-bar-division" id="finished"></ul>
   </div>
 </div>
