--- a/source/site/frontend/css/task-item.css
+++ b/source/site/frontend/css/task-item.css
@@ -24,11 +24,24 @@ button {
 
 /* ---- View Mode ---- */
 
+.nonpending-item {
+  display: flex;
+  flex-direction: column;
+}
+
+#task-name-container, 
+#estimated-cycle-container,
+#actual-cycle-container {
+  flex-grow: 2;
+  width: 33%;
+}
+
 /*
  * View Mode Task Item Name & Pomo Count
  */
 #task-view.task,
-#pomo-counter-view.pomo-counter {
+#pomo-counter-view.pomo-counter,
+#actual-pomo-counter.pomo-counter {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -36,7 +49,6 @@ button {
   border: 1mm;
   border-radius: 5px;
   line-height: 24px;
-  width: 35%;
   background-color: rgba(255, 255, 255, 0.8);
   font-size: medium;
   flex-grow: 4;
@@ -48,7 +60,6 @@ button {
 
 .order-btn-container {
   display: flex;
-  flex-grow: 2;
   flex-direction: row;
   flex-wrap: nowrap;
   align-items: center;
